Идентификатор тега как композитный объект
