# src/Lowtab.Monster.Service.Contracts/Articles/ArticlesRoutes.cs
@@ -46,10 +46,10 @@ public static class ArticlesRoutes
     /// <summary>
     ///     Маршрут для добавления тега к статье
     /// </summary>
-    public const string AddTagToArticle = $"{BaseUrl}/{{id}}/tag/{{tagId}}/{{group}}";
+    public const string AddTagToArticle = $"{BaseUrl}/{{id}}/tag/{{tag}}";
 
     /// <summary>
     ///     Маршрут для удаления тега из статьи
     /// </summary>
-    public const string DeleteTagFromArticle = $"{BaseUrl}/{{id}}/tag/{{tagId}}/{{group}}";
+    public const string DeleteTagFromArticle = $"{BaseUrl}/{{id}}/tag/{{tag}}";
 }
